deployment_ymls/deployment-template.yml
apiVersion: v1
kind: ConfigMap
metadata:
  name: kuberneteschallengecm
data:
  NAME: CEYCEY
root@ip-192-168-0-12:/home/ubuntu# cat /DockerTests/kubernetes-challenge/deployment-template.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: expressapi
  labels:
    app: expressapi
spec:
  replicas: 1
  selector:
    matchLabels:
      app: expressapi
  template:
    metadata:
      labels:
        app: expressapi
    spec:
      containers:
        - name: expressapi
          image: kuberneteschallengecey:1.0
