deployment_ymls/createservice.yml
apiVersion: v1
kind: Service
metadata:
  name: expressapi
spec:
  selector:
    app: expressapi
  ports:
    - protocol: TCP
      port: 80
      targetPort: 4000
