deployment_ymls/createingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: expressapi-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: expressapi
            port:
              number: 80
